handle showing category and service